# phantom-lens

./: .gitignore  TESTING_QUICK_REFERENCE.md  TEST_IMPLEMENTATION_SUMMARY.md  env.d.ts  jest.config.js  jest.setup.js  package.json
.github/workflows/: build.yml  test.yml
docs/: SYSTEM_AUDIO.md
electron/: AutoUpdater.ts  ProcessingHelper.ts  ScreenshotHelper.ts  SystemAudioHelper.ts  config.ts  ipcHandlers.ts  main.ts  preload.ts  shortcuts.ts
electron/__tests__/: BrowserInjectionHelper.test.ts  ProcessingHelper.test.ts  README.md  ScreenCaptureHelper.test.ts  ScreenshotHelper.test.ts  SystemAudioHelper.test.ts  shortcuts.test.ts  test-utils.ts
native/phantom-audio/: CMakeLists.txt  README.md  build.bat
native/phantom-audio/src/: audio_capture.cpp  audio_capture.h  audio_resampler.cpp  audio_resampler.h  json_protocol.cpp  json_protocol.h  main.cpp  whisper_wrapper.cpp  whisper_wrapper.h
resources/models/whisper/: README.md
src/components/: Commands.tsx
src/components/main/: index.tsx
src/components/response/: index.tsx
src/components/shared/: MeetingAssistantIndicator.tsx  SystemAudioPanel.tsx  Tooltip.tsx
src/hooks/: index.ts  useMeetingAssistant.ts  useSystemAudio.ts
src/types/: systemAudio.d.ts
